@@ -1,20 +1,23 @@
-package com.danielfreitassc.aula_1.exercicioB;
+package com.danielfeitassc.exercicio02.services;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 
+import com.danielfeitassc.exercicio02.models.JogadorEntity;
 
 import org.springframework.stereotype.Service;
 
 @Service
-public class JogadorGerador {
-    private static final String SOBRENOMES_URI = "https://venson.net.br/resources/data/sobrenomes.txt";
+public class JogadorService {
+    
+private static final String SOBRENOMES_URI = "https://venson.net.br/resources/data/sobrenomes.txt";
     private static final String NOMES_URI = "https://venson.net.br/resources/data/nomes.txt";
     private static final String CLUBES_URI = "https://venson.net.br/resources/data/clubes.txt";
     private static final String POSICOES_URI = "https://venson.net.br/resources/data/posicoes.txt";
@@ -24,46 +27,45 @@ public class JogadorGerador {
     private List<String> clubes;
     private List<String> posicoes;
     
-    public JogadorGerador() {
+    public JogadorService() {
         this.sobrenomes = fetchData(SOBRENOMES_URI);
         this.nomes = fetchData(NOMES_URI);
         this.clubes = fetchData(CLUBES_URI);
         this.posicoes = fetchData(POSICOES_URI);
     }
 
-        private List<String> fetchData(String urlString) {
+    private List<String> fetchData(String urlString) {
         List<String> data = new ArrayList<>();
         try {
-            URL url = new URL(urlString);
-            HttpURLConnection con = (HttpURLConnection) url.openConnection();
+            URI uri = new URI(urlString);
+            HttpURLConnection con = (HttpURLConnection) uri.toURL().openConnection();
             con.setRequestMethod("GET");
-            BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-            String inputLine;
-            while ((inputLine = in.readLine()) != null) {
-                data.add(inputLine);
+            try (BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()))) {
+                in.lines().forEach(data::add);
             }
-            in.close();
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             e.printStackTrace();
         }
         return data;
     }
+    
 
-    public Jogador generateJogador() {
+    public JogadorEntity generateJogador() {
         Random random = new Random();
         String nome = nomes.get(random.nextInt(nomes.size()));
         String sobrenome = sobrenomes.get(random.nextInt(sobrenomes.size()));
         String clube = clubes.get(random.nextInt(clubes.size()));
         String posicao = posicoes.get(random.nextInt(posicoes.size()));
         int idade = random.nextInt(20) + 18;
-        return new Jogador(nome, sobrenome, posicao, idade, clube);
+        return new JogadorEntity(nome, sobrenome, posicao, idade, clube);
     }
 
-    public List<Jogador> generateJogadores(int quantity) {
-        List<Jogador> jogadores = new ArrayList<>();
+    public List<JogadorEntity> generateJogadores(int quantity) {
+        List<JogadorEntity> jogadores = new ArrayList<>();
         for (int i = 0; i < quantity; i++) {
             jogadores.add(generateJogador());
         }
         return jogadores;
     }
 }
+
